--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
 
 <a href="yahoovguide://v1/home/">Home</a><br/>
-<a href="yahoovguide://v1/show/?id=SH019229360000">Show</a><br/>
-<a href="yahoovguide://v1/movie/?id=MV000000110000">Movie</a><br/>
-<a href="yahoovguide://v1/card/?id=b32aa43f-d0cd-47af-825c-86d70ee25642&amp;limit=333">Card</a><br/>
-<a href="yahoovguide://v1/seasons/?id=SH019229360000&amp;selection=1">Seasons</a><br/>
+<a href="yahoovguide://v1/getShow/?id=SH019229360000">Show</a><br/>
+<a href="yahoovguide://v1/getMovie/?id=MV000000110000">Movie</a><br/>
+<a href="yahoovguide://v1/getCard/?id=b32aa43f-d0cd-47af-825c-86d70ee25642&amp;limit=333">Card</a><br/>
+<a href="yahoovguide://v1/getSeasons/?id=SH019229360000&amp;selection=1">Seasons</a><br/>
 <a href="yahoovguide://v1/search/?query=mad%20max">Search</a><br/>
-<a href="yahoovguide://v1/feed/?id=shows">Feed(shows)</a><br/>
+<a href="yahoovguide://v1/getFeeds/?id=shows">Feed(shows)</a><br/>
 
 </body>
 
