--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@ a {
 <br/>
 <a href="yahoovguide://v1/search/?query=mad%20max">Search (mad max)</a><br/>
 <br/>
-<a href="yahoovguide://v1/getFeed/?id=featured">Feed Test1 (featured)</a><br/>
-<a href="yahoovguide://v1/getFeed/?id=movies">Feed Test2 (movies)</a><br/>
-<a href="yahoovguide://v1/getFeed/?id=shows">Feed Test3 (shows)</a><br/>
+<a href="yahoovguide://v1/getFeeds/?id=featured">Feed Test1 (featured)</a><br/>
+<a href="yahoovguide://v1/getFeeds/?id=movies">Feed Test2 (movies)</a><br/>
+<a href="yahoovguide://v1/getFeeds/?id=shows">Feed Test3 (shows)</a><br/>
 
 </body>
 
